@@ -105,6 +105,14 @@ class Migrate_To_4_1(Migrator):
 
     def run(self, step=None):
         logger.info('Migrating to PloneMeeting 4.1...')
+
+        # recook CSS as we moved to Plone 4.3.15 and portal_css.concatenatedresources
+        # could not exist, it is necessary for collective.js.tooltispter upgrade step
+        try:
+            self.portal.portal_css.concatenatedresources
+        except AttributeError:
+            self.portal.portal_css.cookResources()
+
         # reinstall so versions are correctly shown in portal_quickinstaller
         # plone.app.versioningbehavior is installed
         self.reinstall(profiles=['profile-Products.PloneMeeting:default', ],
